Update User module
