# bundled.swagger.json
@@ -11,6 +11,10 @@
       "description": "Auth Management"
     },
     {
+      "name": "User",
+      "description": "User Management"
+    },
+    {
       "name": "Workflow",
       "description": "Workflow Management"
     },
@@ -172,6 +176,268 @@
                     "role": "user",
                     "email": "johndoe@gmail.com"
                   }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get User",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "path",
+            "required": true,
+            "default": 1,
+            "description": "page number",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "path",
+            "required": true,
+            "default": 12,
+            "description": "limit the documents returned ",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get Me Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/{id}/ban": {
+      "put": {
+        "summary": "Ban User",
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "67618a680199c290f1cbd96b"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Workflow Updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/me": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get User",
+        "responses": {
+          "200": {
+            "description": "Get Me Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserMe"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Update Me",
+        "tags": [
+          "User"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "john"
+                  },
+                  "lastname": {
+                    "type": "string",
+                    "example": "Doe"
+                  },
+                  "birthday": {
+                    "type": "string",
+                    "example": "2024-12-29"
+                  },
+                  "gender": {
+                    "type": "string",
+                    "enum": [
+                      "M",
+                      "F"
+                    ],
+                    "example": "M"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Workflow Updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserMe"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete Me",
+        "tags": [
+          "User"
+        ],
+        "responses": {
+          "200": {
+            "description": "User Deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserMe"
                 }
               }
             }
@@ -501,11 +767,14 @@
         ],
         "responses": {
           "200": {
-            "description": "Get Output Success",
+            "description": "Get Outputs Success",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Output"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Output"
+                  }
                 }
               }
             }
@@ -635,6 +904,80 @@
   },
   "components": {
     "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": "67618a680199c290f1cbd96b"
+          },
+          "name": {
+            "type": "string",
+            "example": "john"
+          },
+          "lastname": {
+            "type": "string",
+            "example": "Doe"
+          },
+          "birthday": {
+            "type": "string",
+            "example": "2024-12-29"
+          },
+          "gender": {
+            "type": "string",
+            "enum": [
+              "M",
+              "F"
+            ],
+            "example": "M"
+          },
+          "email": {
+            "type": "string",
+            "example": "johnDoe@gmail.com"
+          },
+          "banned": {
+            "type": "boolean",
+            "example": false
+          },
+          "deleted": {
+            "type": "boolean",
+            "example": false
+          }
+        }
+      },
+      "UserMe": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": "67618a680199c290f1cbd96b"
+          },
+          "name": {
+            "type": "string",
+            "example": "john"
+          },
+          "lastname": {
+            "type": "string",
+            "example": "Doe"
+          },
+          "birthday": {
+            "type": "string",
+            "example": "2024-12-29"
+          },
+          "gender": {
+            "type": "string",
+            "enum": [
+              "M",
+              "F"
+            ],
+            "example": "M"
+          },
+          "email": {
+            "type": "string",
+            "example": "johnDoe@gmail.com"
+          }
+        }
+      },
       "Output": {
         "type": "object",
         "properties": {
